# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Support\Facades\Route;
 use App\Products\Http\Controllers\ProductController;
 use App\Orders\Http\Controllers\OrdersController;
+use  App\Auth\Http\Controllers\AuthController;
 
 /*
 |--------------------------------------------------------------------------
@@ -17,23 +18,32 @@ use App\Orders\Http\Controllers\OrdersController;
 
 
 
-// Rutas de productos
-Route::prefix('products')->group(function () {
-    Route::get('/version', function () {
-        return response()->json(['version' => '1.0.0']);
-    });
-    Route::get('/',  [ProductController::class, 'index']);
-    Route::post('/',  [ProductController::class, 'store']);
-    Route::get('{id}', [ProductController::class, 'show']);
-    Route::put('{id}', [ProductController::class, 'update']);
-    Route::delete('{id}', [ProductController::class, 'destroy']);
-});
+Route::post('login', [AuthController::class, 'login']);
+Route::post('register', [AuthController::class, 'register']);
+Route::middleware('auth.jwt')->get('user', [AuthController::class, 'getUser']);
 
-// Rutas de órdenes
-Route::prefix('orders')->group(function () {
-    Route::get('/', [OrdersController::class, 'index']);
-    Route::post('/', [OrdersController::class, 'store']);
-    Route::get('{id}', [OrdersController::class, 'show']);
-    Route::put('{id}', [OrdersController::class, 'update']);
-    Route::delete('{id}', [OrdersController::class, 'destroy']);
+
+
+
+Route::middleware('auth.jwt')->group(function () {
+    // Rutas de productos
+    Route::prefix('products')->group(function () {
+        Route::get('/version', function () {
+            return response()->json(['version' => '1.0.0']);
+        });
+        Route::get('/',  [ProductController::class, 'index']);
+        Route::post('/',  [ProductController::class, 'store']);
+        Route::get('{id}', [ProductController::class, 'show']);
+        Route::put('{id}', [ProductController::class, 'update']);
+        Route::delete('{id}', [ProductController::class, 'destroy']);
+    });
+
+    // Rutas de órdenes
+    Route::prefix('orders')->group(function () {
+        Route::get('/', [OrdersController::class, 'index']);
+        Route::post('/', [OrdersController::class, 'store']);
+        Route::get('{id}', [OrdersController::class, 'show']);
+        Route::put('{id}', [OrdersController::class, 'update']);
+        Route::delete('{id}', [OrdersController::class, 'destroy']);
+    });
 });
